[gd_scene load_steps=2 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="Main" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 793.0
margin_bottom = 643.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="FileDialog" type="FileDialog" parent="MarginContainer"]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 20.0
margin_right = 766.0
margin_bottom = 616.0
window_title = "Open a File"
mode = 0
access = 2

[node name="PreviewImageDialog" type="FileDialog" parent="MarginContainer"]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 20.0
margin_right = 766.0
margin_bottom = 616.0
window_title = "Open a File"
mode = 0
access = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 766.0
margin_bottom = 616.0
alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
margin_right = 746.0
margin_bottom = 33.0
size_flags_vertical = 3

[node name="UploadContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 37.0
margin_right = 746.0
margin_bottom = 255.0
rect_min_size = Vector2( 500, 0 )
custom_constants/separation = 20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/UploadContainer"]
margin_right = 746.0
margin_bottom = 123.0
size_flags_horizontal = 3
custom_constants/separation = 25
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/UploadContainer/HBoxContainer"]
margin_right = 360.0
margin_bottom = 123.0
rect_min_size = Vector2( 0, 123 )
size_flags_horizontal = 3
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/UploadContainer/HBoxContainer/VBoxContainer"]
margin_top = 3.0
margin_right = 360.0
margin_bottom = 17.0
text = "Upload a mod to the workshop"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/UploadContainer/HBoxContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 360.0
margin_bottom = 51.0

[node name="FileLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/UploadContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_right = 332.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false
placeholder_text = "Select mod file"

[node name="SelectModButton" type="Button" parent="MarginContainer/VBoxContainer/UploadContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 336.0
margin_right = 360.0
margin_bottom = 24.0
text = "..."

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/UploadContainer/HBoxContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 360.0
margin_bottom = 85.0

[node name="PreviewLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/UploadContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 332.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false
placeholder_text = "Select preview image"

[node name="SelectPreviewButton" type="Button" parent="MarginContainer/VBoxContainer/UploadContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 336.0
margin_right = 360.0
margin_bottom = 24.0
text = "..."

[node name="WorkshopIDLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/UploadContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 95.0
margin_right = 360.0
margin_bottom = 119.0
placeholder_text = "No workshop ID"

[node name="TagContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/UploadContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 385.0
margin_right = 746.0
margin_bottom = 123.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="TagLabel" type="Label" parent="MarginContainer/VBoxContainer/UploadContainer/HBoxContainer/TagContainer"]
unique_name_in_owner = true
margin_right = 361.0
margin_bottom = 14.0
text = "Tags (CTRL + Click to select/deselect)"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/UploadContainer/HBoxContainer/TagContainer"]
margin_top = 24.0
margin_right = 361.0
margin_bottom = 123.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="TagList" type="ItemList" parent="MarginContainer/VBoxContainer/UploadContainer/HBoxContainer/TagContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 361.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
allow_reselect = true
allow_rmb_select = true
auto_height = true
max_columns = 10
same_column_width = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/UploadContainer"]
margin_left = 223.0
margin_top = 143.0
margin_right = 523.0
margin_bottom = 218.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 4
custom_constants/separation = 10
alignment = 1

[node name="UploadButton" type="Button" parent="MarginContainer/VBoxContainer/UploadContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_right = 300.0
margin_bottom = 20.0
text = "Upload"

[node name="TermsOfServiceLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/UploadContainer/VBoxContainer2"]
margin_top = 30.0
margin_right = 300.0
margin_bottom = 75.0
bbcode_enabled = true
bbcode_text = "By submitting this item, you agree to the [url]workshop terms of service[/url]
"
text = "By submitting this item, you agree to the workshop terms of service
"
fit_content_height = true
scroll_active = false

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 259.0
margin_right = 746.0
margin_bottom = 292.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 296.0
margin_right = 746.0
margin_bottom = 596.0
custom_constants/separation = 10

[node name="Instructions" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 336.0
margin_bottom = 300.0
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "[b]Instructions[/b]

1) Select the mod you want to upload (.zip / .pck) (needs to be compatible with [url]ModLoader[/url])

2) Select a preview image if it's the first time uploading the mod or if you want to change it

3) Select tags for your mod if available (leave empty if you don't want to change them)

4) Add the mod's workshop ID if you're updating it, leave empty if it's a new mod

5) Upload it and take note of the workshop ID if it's a new mod. Use it when you want to update it

6) Check and edit your mod in the Steam Workshop, then set it public when it's ready"
text = "Instructions

1) Select the mod you want to upload (.zip / .pck) (needs to be compatible with ModLoader)

2) Select a preview image if it's the first time uploading the mod or if you want to change it

3) Select tags for your mod if available (leave empty if you don't want to change them)

4) Add the mod's workshop ID if you're updating it, leave empty if it's a new mod

5) Upload it and take note of the workshop ID if it's a new mod. Use it when you want to update it

6) Check and edit your mod in the Steam Workshop, then set it public when it's ready"
scroll_active = false

[node name="Console" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 346.0
margin_right = 746.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Console"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Console/MarginContainer"]
unique_name_in_owner = true
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 290.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ConsoleContent" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Console/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 380.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 7
autowrap = true

[connection signal="file_selected" from="MarginContainer/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="MarginContainer/PreviewImageDialog" to="." method="_on_PreviewImageDialog_file_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/UploadContainer/HBoxContainer/VBoxContainer/HBoxContainer2/SelectModButton" to="." method="_on_SelectModButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/UploadContainer/HBoxContainer/VBoxContainer/HBoxContainer/SelectPreviewButton" to="." method="_on_SelectPreviewButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/UploadContainer/VBoxContainer2/UploadButton" to="." method="_on_UploadButton_pressed"]
[connection signal="meta_clicked" from="MarginContainer/VBoxContainer/UploadContainer/VBoxContainer2/TermsOfServiceLabel" to="." method="_on_TermsOfServiceLabel_meta_clicked"]
[connection signal="meta_clicked" from="MarginContainer/VBoxContainer/HBoxContainer/Instructions" to="." method="_on_Instructions_meta_clicked"]
